--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,50 +1,9 @@
-<form class="contact100-form validate-form">
-  <span class="contact100-form-title">
-    Send Us A Message
-  </span>
-
-  <label class="label-input100" for="first-name">Tell us your name *</label>
-  <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
-    <input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
-    <span class="focus-input100"></span>
-  </div>
-  <div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
-    <input class="input100" type="text" name="last-name" placeholder="Last name">
-    <span class="focus-input100"></span>
-  </div>
-
-  <label class="label-input100" for="email">Enter your email *</label>
-  <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-    <input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
-    <span class="focus-input100"></span>
-  </div>
-
-  <label class="label-input100" for="phone">Enter phone number</label>
-  <div class="wrap-input100">
-    <input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
-    <span class="focus-input100"></span>
-  </div>
-
-  <label class="label-input100" for="message">Message *</label>
-  <div class="wrap-input100 validate-input" data-validate = "Message is required">
-    <textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
-    <span class="focus-input100"></span>
-  </div>
-
-  <div class="container-contact100-form-btn">
-    <button class="contact100-form-btn">
-      Send Message
-    </button>
-  </div>
-</form>
-
-
 <%= form_with model: @contact, class: 'contact100-form validate-form' do |form| %>
   <span class="contact100-form-title">
-    <%= I18n.t(:title) %>
+    <%= I18n.t(:form_title, scope: :contact) %>
   </span>
 
-  <%= form.label :first_name, I18n.t(:name), class: 'label-input100' %>
+  <%= form.label :first_name, I18n.t(:name, scope: :contact), class: 'label-input100' %>
   <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
     <%= form.text_field :first_name, class: 'input100', placeholder: 'First name' %>
     <span class="focus-input100"></span>
@@ -54,25 +13,25 @@
     <span class="focus-input100"></span>
   </div>
 
-  <%= form.label :email, I18n.t(:email), class: 'label-input100' %>
+  <%= form.label :email, I18n.t(:email, scope: :contact), class: 'label-input100' %>
   <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
     <%= form.email_field :email, class: 'input100', placeholder: 'Eg. example@email.com' %>
     <span class="focus-input100"></span>
   </div>
 
-  <%= form.label :phone, I18n.t(:phone), class: 'label-input100' %>
+  <%= form.label :phone, I18n.t(:phone, scope: :contact), class: 'label-input100' %>
   <div class="wrap-input100">
     <%= form.phone_field :phone, class: 'input100', placeholder: 'Eg. +1 800 000000' %>
     <span class="focus-input100"></span>
   </div>
 
-  <%= form.label :message, I18n.t(:message), class: 'label-input100' %>
+  <%= form.label :message, I18n.t(:message, scope: :contact), class: 'label-input100' %>
   <div class="wrap-input100 validate-input" data-validate = "Message is required">
     <%= form.text_area :message, class: 'input100', placeholder: 'Write us a message' %>
     <span class="focus-input100"></span>
   </div>
 
   <div class="container-contact100-form-btn">
-    <%= form.submit I18n.t(:send_message), class: 'contact100-form-btn' %>
+    <%= form.submit I18n.t(:send_message, scope: :contact), class: 'contact100-form-btn' %>
   </div>
 <% end %>
