--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-contact100">
   <div class="wrap-contact100">
-    <% render 'form' %>
+    <%= render 'form' %>
 
     <div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
       <div class="flex-w size1 p-b-47">
@@ -51,5 +51,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
+
