--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="wrap-contact100">
     <%= render 'form' %>
 
-    <div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
+    <div class="contact100-more flex-col-c-m contact-image-style">
       <div class="flex-w size1 p-b-47">
         <div class="txt1 p-r-25">
           <span class="lnr lnr-map-marker"></span>
